# doh-proxy

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
config/: default.toml
dns-dashboard/: Cargo.toml  build.rs
dns-dashboard-ui/: index.html  package-lock.json  package.json  vite.config.js
dns-dashboard-ui/src/: App.css  App.jsx  api.js  api.test.js  test-setup.js  utils.js  utils.test.js
dns-dashboard-ui/src/components/: QueriesOverTime.jsx  QueryFeed.jsx  QueryFeed.test.jsx  StatCards.jsx  StatCards.test.jsx  TopDomains.jsx
dns-dashboard/src/: api.rs  db.rs  ingestor.rs  lib.rs  main.rs
dns-dashboard/tests/: api_test.rs  db_test.rs  ingestor_test.rs
docs/superpowers/plans/: 2026-04-03-doh-proxy-gui.md  2026-04-04-typescript-gui-rewrite.md  2026-04-05-cli-rewrite.md  2026-04-05-tui.md  2026-04-06-dns-dashboard-backend.md  2026-04-06-dns-dashboard-frontend.md
gui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs  proxy_manager.rs
gui/src/components/: Sidebar.tsx
gui/src/components/ui/: Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.tsx  StatusDot.tsx
gui/src/lib/: api.test.ts  api.ts  types.ts
gui/src/pages/: Config.test.tsx  Config.tsx  Dashboard.test.tsx  Dashboard.tsx  QueryLog.tsx  Stats.tsx
src/: cache.rs  config.rs  error.rs  gui_main.rs  lib.rs  main.rs  proxy.rs  resolver.rs  runtime.rs  server.rs  stats.rs  tui_main.rs  upstream.rs
src/cli/: config_cmd.rs  logs.rs  mod.rs  start.rs  status.rs  stop.rs
src/gui/: app.rs  config_panel.rs  dashboard.rs  log_panel.rs  mod.rs  stats_panel.rs
src/tui/: event.rs  mod.rs
src/tui/tabs/: mod.rs
tests/: config_path_test.rs  integration_test.rs
