[package]
name = "doh-proxy"
version = "0.1.0"
edition = "2021"
description = "A DNS-over-HTTPS proxy with a polished terminal interface"
license = "MIT"
repository = "https://github.com/your-username/doh-proxy"
keywords = ["dns", "proxy", "doh", "cli", "terminal"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[lib]
name = "doh_proxy"
path = "src/lib.rs"

[[bin]]
name = "doh-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
hickory-proto = "0.25"
moka = { version = "0.12", features = ["future"] }
base64 = "0.22"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
directories = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
