[package]
name = "dns-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "dns_dashboard"
path = "src/lib.rs"

[[bin]]
name = "dns-dashboard"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = [] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
